# target-mongodb

./: README.md  pyproject.toml  target-mongodb.sh
target_mongodb/: sinks.py  target.py
