[tool.poetry]
name = "target-mongodb"
version = "0.0.4"
description = "`target-mongodb` is a Singer target for MongoDB, built with the Meltano SDK for Singer Targets."
authors = ["hotglue"]
license = "Apache 2.0"

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
requests = "^2.28.1"
singer-sdk = "^0.13"
pymongo = {version = "^4.3",extras = ["srv"]}

[tool.poetry.dev-dependencies]
pytest = "^6.1.2"

[build-system]
requires = ["poetry-core==1.0.8"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
# CLI declaration
target-mongodb = 'target_mongodb.target:TargetMongoDb.cli'